--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
 		"dev": "cross-env NODE_ENV=development nodemon backend/server.js",
 		"start": "cross-env NODE_ENV=production node backend/server.js",
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+		"seed-users": "node backend/scripts/seedUsers.js"
 	},
   "repository": {
     "type": "git",
