--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "private": true,
   "main": "backend/server.js",
   "scripts": {
-		"dev": "cross-env NODE_ENV=development nodemon backend/server.js",
-		"start": "cross-env NODE_ENV=production node backend/server.js",
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-		"seed-users": "node backend/scripts/seedUsers.js",
-		"seed-data": "node backend/scripts/seedData.js"
-	},
+    "dev": "cross-env NODE_ENV=development nodemon backend/server.js",
+    "start": "cross-env NODE_ENV=production node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "seed-users": "node backend/scripts/seedUsers.js",
+    "seed-data": "node backend/scripts/seedData.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/codernayeem/Sparrow.git"
@@ -33,7 +33,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
